--- a/mandelbulber2/formula/ui/pseudo_kleinian_mod1.ui
+++ b/mandelbulber2/formula/ui/pseudo_kleinian_mod1.ui
@@ -1794,7 +1794,7 @@
      <property name="checkable">
       <bool>true</bool>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_35" stretch="0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_35" stretch="0,0,0">
       <property name="spacing">
        <number>2</number>
       </property>
@@ -1935,6 +1935,22 @@
         </item>
        </layout>
       </item>
+      <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledN_false">
+        <property name="font">
+         <font>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="text">
+         <string notr="true">flip z.z (avoid color cuts, slower)</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
@@ -1955,7 +1971,7 @@
      <property name="checkable">
       <bool>true</bool>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_34" stretch="0">
+     <layout class="QVBoxLayout" name="verticalLayout_34" stretch="0,0">
       <property name="spacing">
        <number>2</number>
       </property>
@@ -2045,6 +2061,22 @@
         </item>
        </layout>
       </item>
+      <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledK_false">
+        <property name="font">
+         <font>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="text">
+         <string notr="true">flip z.x (avoid color cuts, slower)</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
@@ -2066,16 +2098,6 @@
       <property name="bottomMargin">
        <number>2</number>
       </property>
-      <item>
-       <widget class="MyCheckBox" name="checkBox_transf_function_enabledN_false">
-        <property name="layoutDirection">
-         <enum>Qt::LeftToRight</enum>
-        </property>
-        <property name="text">
-         <string notr="true">flip z.z (avoid color cuts, slower)</string>
-        </property>
-       </widget>
-      </item>
       <item>
        <layout class="QGridLayout" name="gridLayout_71" columnstretch="0,0,1">
         <property name="spacing">
