--- a/mandelbulber2/formula/ui/transf_supershape.ui
+++ b/mandelbulber2/formula/ui/transf_supershape.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>934</width>
-    <height>2891</height>
+    <height>2912</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -419,13 +419,6 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
-       <property name="text">
-        <string>pow</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="0">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledY_false">
        <property name="text">
@@ -461,6 +454,13 @@
        </property>
        <property name="singleStep">
         <double>0.100000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
+       <property name="text">
+        <string>pow</string>
        </property>
       </widget>
      </item>
@@ -521,7 +521,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="MyDoubleSpinBox" name="spinbox_transf_minimum_radius_0">
+      <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleA_1">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -555,7 +555,7 @@
      <item>
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledx_false">
        <property name="text">
-        <string>z.x = r * sin(phi)</string>
+        <string>z.x = r * cos(phi)</string>
        </property>
       </widget>
      </item>
@@ -583,7 +583,7 @@
         <bool>false</bool>
        </property>
        <property name="text">
-        <string>cos</string>
+        <string>sin</string>
        </property>
       </widget>
      </item>
@@ -612,7 +612,7 @@
    <item>
     <widget class="MyCheckBox" name="checkBox_transf_function_enabledC_false">
      <property name="text">
-      <string>C</string>
+      <string>todo later</string>
      </property>
     </widget>
    </item>
@@ -723,7 +723,7 @@
    <item>
     <widget class="MyGroupBox" name="groupCheck_transf_function_enabledK_false">
      <property name="title">
-      <string>&amp;temp difs</string>
+      <string>&amp;aux.dist</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
@@ -825,7 +825,7 @@
            <bool>false</bool>
           </property>
           <property name="text">
-           <string>abs(zc)</string>
+           <string>no abs(zc)</string>
           </property>
          </widget>
         </item>
