--- a/mandelbulber2/formula/ui/transf_spherical_inv_v4.ui
+++ b/mandelbulber2/formula/ui/transf_spherical_inv_v4.ui
@@ -499,42 +499,14 @@ offset:</string>
        </widget>
       </item>
       <item>
-       <layout class="QGridLayout" name="gridLayout_37" columnstretch="0,1">
+       <layout class="QGridLayout" name="gridLayout_38" columnstretch="0,1">
         <property name="spacing">
          <number>2</number>
         </property>
-        <item row="0" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+        <item row="2" column="1">
+         <widget class="QLabel" name="label_26">
           <property name="text">
-           <string>Mode 1</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledB_false">
-          <property name="text">
-           <string>Mode 3</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
-          <property name="text">
-           <string>E</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledA_false">
-          <property name="text">
-           <string>Mode 2</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QLabel" name="label_25">
-          <property name="text">
-           <string>if (rr &lt; maxRR) mde = minRR</string>
+           <string>if (rr &lt; maxRR &amp;&amp; rr &gt; minRR) mde = minRR; else if (rr &gt; maxRR) mde =  maxRR / rr</string>
           </property>
          </widget>
         </item>
@@ -545,13 +517,6 @@ offset:</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledD_false">
-          <property name="text">
-           <string>Mode 5</string>
-          </property>
-         </widget>
-        </item>
         <item row="3" column="0">
          <widget class="MyCheckBox" name="checkBox_transf_function_enabledC_false">
           <property name="text">
@@ -559,17 +524,10 @@ offset:</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
-         <widget class="QLabel" name="label_26">
+        <item row="2" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledB_false">
           <property name="text">
-           <string>if (rr &lt; maxRR &amp;&amp; rr &gt; minRR) mde = minRR</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledF_false">
-          <property name="text">
-           <string>F</string>
+           <string>Mode 3</string>
           </property>
          </widget>
         </item>
@@ -580,10 +538,66 @@ offset:</string>
           </property>
          </widget>
         </item>
+        <item row="0" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+          <property name="text">
+           <string>Mode 1</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLabel" name="label_25">
+          <property name="text">
+           <string>if (rr &lt; maxRR) mde = minRR</string>
+          </property>
+         </widget>
+        </item>
         <item row="3" column="1">
          <widget class="QLabel" name="label_27">
           <property name="text">
            <string>if (rr &lt; minRR) mde = minRR; else if (rr &gt; maxRR) mde =  maxRR;</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledD_false">
+          <property name="text">
+           <string>Mode 5</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="QLabel" name="label_29">
+          <property name="text">
+           <string>if (rr &gt; maxRR) mde =  maxRR; if (rr &lt; minRR) mde = minRR</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledA_false">
+          <property name="text">
+           <string>Mode 2</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
+          <property name="text">
+           <string>Mode 6</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledF_false">
+          <property name="text">
+           <string>Mode 7</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="1">
+         <widget class="QLabel" name="label_28">
+          <property name="text">
+           <string>if (rr &lt; maxRR &amp;&amp; rr &gt; minRR) mde = minRR; else if (rr &gt; maxRR) mde =  rr / maxRR</string>
           </property>
          </widget>
         </item>
