--- a/mandelbulber2/formula/ui/transf_difs_supershape.ui
+++ b/mandelbulber2/formula/ui/transf_difs_supershape.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>934</width>
-    <height>3406</height>
+    <height>3431</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -779,7 +779,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label_183">
        <property name="text">
-        <string>r scale:</string>
+        <string>rad scale:</string>
        </property>
       </widget>
      </item>
@@ -793,7 +793,7 @@
      <item row="2" column="0">
       <widget class="QLabel" name="label_193">
        <property name="text">
-        <string>s scale:</string>
+        <string>sub scale:</string>
        </property>
       </widget>
      </item>
@@ -1081,52 +1081,10 @@
        </widget>
       </item>
       <item>
-       <layout class="QGridLayout" name="gridLayout_9" columnstretch="0,1">
+       <layout class="QGridLayout" name="gridLayout_32" columnstretch="0,1">
         <property name="spacing">
          <number>2</number>
         </property>
-        <item row="2" column="0">
-         <widget class="QLabel" name="label_180">
-          <property name="text">
-           <string>zc.z height:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleD_1">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="prefix">
-           <string/>
-          </property>
-          <property name="suffix">
-           <string/>
-          </property>
-          <property name="decimals">
-           <number>6</number>
-          </property>
-          <property name="minimum">
-           <double>0.000000000000000</double>
-          </property>
-          <property name="maximum">
-           <double>99.989999999999995</double>
-          </property>
-          <property name="singleStep">
-           <double>0.100000000000000</double>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_184">
-          <property name="text">
-           <string>zc.z scaleD1:</string>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="1">
          <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetF_0">
           <property name="sizePolicy">
@@ -1151,50 +1109,19 @@
            <double>99.989999999999995</double>
           </property>
           <property name="singleStep">
-           <double>0.100000000000000</double>
+           <double>0.010000000000000</double>
           </property>
          </widget>
         </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QGridLayout" name="gridLayout_7" columnstretch="0,1">
-        <property name="spacing">
-         <number>2</number>
-        </property>
-        <item row="4" column="0">
-         <widget class="QLabel" name="label_178">
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_180">
           <property name="text">
-           <string>DE fix:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="1">
-         <widget class="QFrame" name="frame">
-          <property name="frameShape">
-           <enum>QFrame::StyledPanel</enum>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Raised</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledZc_false">
-          <property name="text">
-           <string>z = zc</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledK_false">
-          <property name="text">
-           <string>K</string>
+           <string>zc.z height:</string>
           </property>
          </widget>
         </item>
         <item row="5" column="1">
-         <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_01">
+         <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleD_1">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
@@ -1221,7 +1148,28 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
+        <item row="4" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledK_false">
+          <property name="text">
+           <string>chamfer sharp</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledJ_false">
+          <property name="text">
+           <string>chamfer 2</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QLabel" name="label_184">
+          <property name="text">
+           <string>chamfer scale:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
          <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_p05">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1249,35 +1197,56 @@
           </property>
          </widget>
         </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="label_185">
+        <item row="7" column="0">
+         <widget class="QLabel" name="label_178">
           <property name="text">
-           <string>offset01:</string>
+           <string>DE fix:</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledI_false">
+        <item row="0" column="1">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledN_false">
           <property name="text">
-           <string>max</string>
+           <string>max mode 2</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
-          <property name="text">
-           <string>thh</string>
+        <item row="3" column="1">
+         <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetA_p01">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="prefix">
+           <string/>
+          </property>
+          <property name="suffix">
+           <string/>
+          </property>
+          <property name="decimals">
+           <number>6</number>
+          </property>
+          <property name="minimum">
+           <double>-99.989999999999995</double>
+          </property>
+          <property name="maximum">
+           <double>99.989999999999995</double>
+          </property>
+          <property name="singleStep">
+           <double>0.010000000000000</double>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledJ_false">
+        <item row="6" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledM_false">
           <property name="text">
-           <string>J</string>
+           <string>vert max off</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="1">
+        <item row="7" column="1">
          <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_1">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1305,17 +1274,31 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
+        <item row="1" column="0">
          <widget class="QLabel" name="label_179">
           <property name="text">
            <string>thickness:</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledM_false">
+        <item row="0" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledI_false">
           <property name="text">
-           <string>M</string>
+           <string>max() modes</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+          <property name="text">
+           <string>width control</string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledZc_false">
+          <property name="text">
+           <string>z = zc</string>
           </property>
          </widget>
         </item>
@@ -1738,12 +1721,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>42</x>
-     <y>151</y>
+     <x>45</x>
+     <y>448</y>
     </hint>
     <hint type="destinationlabel">
-     <x>141</x>
-     <y>145</y>
+     <x>226</x>
+     <y>450</y>
     </hint>
    </hints>
   </connection>
@@ -1754,12 +1737,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>43</x>
-     <y>175</y>
+     <x>46</x>
+     <y>476</y>
     </hint>
     <hint type="destinationlabel">
-     <x>152</x>
-     <y>177</y>
+     <x>237</x>
+     <y>478</y>
     </hint>
    </hints>
   </connection>
@@ -1770,12 +1753,44 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>25</x>
-     <y>203</y>
+     <x>28</x>
+     <y>504</y>
     </hint>
     <hint type="destinationlabel">
-     <x>191</x>
-     <y>200</y>
+     <x>276</x>
+     <y>506</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledK_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkBox_transf_function_enabledN_false</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>102</x>
+     <y>994</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>181</x>
+     <y>896</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledK_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkBox_transf_function_enabledJ_false</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>52</x>
+     <y>999</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>229</x>
+     <y>1001</y>
     </hint>
    </hints>
   </connection>
