--- a/mandelbulber2/formula/ui/transf_difs_sphere_grid_v3.ui
+++ b/mandelbulber2/formula/ui/transf_difs_sphere_grid_v3.ui
@@ -1418,7 +1418,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;TransfDIFSSphereGridV3&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mbulbSinCos DifsSphGrd3.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_bxFoldInfy_sphGrid3.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_difsSupershape_sphGrid3.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_sphInvV4_menger_sphGridV3.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mbulbSinCos DifsSphGrd3.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
