aux.color hexprisms and cylinders

--- a/mandelbulber2/formula/ui/transf_difs_octahedron.ui
+++ b/mandelbulber2/formula/ui/transf_difs_octahedron.ui
@@ -668,7 +668,7 @@
            <item row="2" column="0">
             <widget class="QLabel" name="label_179">
              <property name="text">
-              <string>z:</string>
+              <string>clamp:</string>
              </property>
             </widget>
            </item>
