--- a/mandelbulber2/formula/ui/transf_difs_octahedron_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_octahedron_v2.ui
@@ -1223,7 +1223,7 @@
            <item row="2" column="0">
             <widget class="QLabel" name="label_179">
              <property name="text">
-              <string>z:</string>
+              <string>clamp col:</string>
              </property>
             </widget>
            </item>
