--- a/mandelbulber2/formula/ui/transf_difs_hexprism.ui
+++ b/mandelbulber2/formula/ui/transf_difs_hexprism.ui
@@ -300,14 +300,14 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label_289">
              <property name="text">
-              <string>cap:</string>
+              <string>cap col:</string>
              </property>
             </widget>
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_178">
              <property name="text">
-              <string>inner:</string>
+              <string>inner col:</string>
              </property>
             </widget>
            </item>
@@ -370,7 +370,7 @@
            <item row="2" column="0">
             <widget class="QLabel" name="label_179">
              <property name="text">
-              <string>band:</string>
+              <string>band col:</string>
              </property>
             </widget>
            </item>
@@ -403,7 +403,7 @@
             </widget>
            </item>
            <item row="3" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetA_0">
+            <widget class="MyDoubleSpinBox" name="spinbox_fold_color_difs0">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
                <horstretch>0</horstretch>
