--- a/mandelbulber2/formula/ui/transf_difs_box.ui
+++ b/mandelbulber2/formula/ui/transf_difs_box.ui
@@ -593,5 +593,22 @@
   <tabstop>groupCheck_info</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>groupCheck_fold_color_aux_color_enabledA_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinbox4_fold_color_difs_0000_x</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>15</x>
+     <y>219</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>205</x>
+     <y>189</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
