--- a/mandelbulber2/formula/ui/transf_difs_box_v3.ui
+++ b/mandelbulber2/formula/ui/transf_difs_box_v3.ui
@@ -1409,5 +1409,22 @@
   <tabstop>groupCheck_info</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>groupCheck_fold_color_aux_color_enabledA_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinbox4_fold_color_difs_0000_x</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>26</x>
+     <y>834</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>257</x>
+     <y>798</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
